Adding Employee Completed

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,10 +16,10 @@
         <h1>Register Employee</h1>
         <form action="register_employee" method="post">
             
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="id">Employee ID</label>
                 <input type="text" class="form-control" name="id" aria-describedby="fname help" placeholder="Enter Employee ID">
-            </div>
+            </div> -->
             <div class="form-group">
                 <label for="first_name">First name</label>
                 <input type="text" class="form-control" name="fname" aria-describedby="fname help" placeholder="Enter first name">
