--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,31 +21,16 @@
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
             <th scope="col">Email Id</th>
+            <th scope="col">Delete Emp</th>
           </tr>
         </thead>
         <tbody>
           <tr th:each="employee : ${listEmployees}">
-            <!-- <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td> -->
             <td th:text="${employee.id}"></td>
             <td th:text="${employee.fname}"></td>
             <td th:text="${employee.lname}"></td>
             <td th:text="${employee.email}"></td>
-
+            <td><a th:href="@{/delete/{emp_no}(emp_no=${employee.id})}">delete</a></td>
           </tr>
         </tbody>
       </table>
