--- a/src/main/resources/templates/employee_update.html
+++ b/src/main/resources/templates/employee_update.html
@@ -3,32 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
     crossorigin="anonymous">
-    
-    <title>Register Employee</title>
+
+    <title>Employee update</title>
 </head>
 <body>
     <div class="container">
-        <h1>Register Employee</h1>
-        <form action="register_employee" method="post">
+        <h1>Update the Employee</h1>
+        <form action="update_employee" method="post">
+            <div class="form-group">
+                <label for="id">Employee ID</label>
+                <input type="text" class="form-control" name="id" aria-describedby="fname help" th:value=${employee.id} readonly>
+            </div>
             <div class="form-group">
                 <label for="first_name">First name</label>
-                <input type="text" class="form-control" name="fname" aria-describedby="fname help" placeholder="Enter first name">
+                <input type="text" class="form-control" name="fname" aria-describedby="fname help" th:value=${employee.fname}>
             </div>
             <div class="form-group">
                 <label for="last_name">Last Name</label>
-                <input type="text" class="form-control" name="lname" aria-describedby="lname help" placeholder="Enter last name">
+                <input type="text" class="form-control" name="lname" aria-describedby="lname help" th:value=${employee.lname}>
             </div>
             <div class="form-group">
               <label for="Email">Email address</label>
-              <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" class="form-control" name="email" aria-describedby="emailHelp" th:value=${employee.email}>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
           </form>
     </div>
 </body>
