--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
             <th scope="col">Last Name</th>
             <th scope="col">Email Id</th>
             <th scope="col">Delete Emp</th>
+            <th scope="col">Update Emp</th>
           </tr>
         </thead>
         <tbody>
@@ -31,6 +32,7 @@
             <td th:text="${employee.lname}"></td>
             <td th:text="${employee.email}"></td>
             <td><a th:href="@{/delete/{emp_no}(emp_no=${employee.id})}">delete</a></td>
+            <td><a th:href="@{/update/{emp_no}(emp_no=${employee.id})}">update</a></td>
           </tr>
         </tbody>
       </table>
